--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^5.2.0",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
-        "vite": "^5.0"
+        "vite": "^5.0",
+        "vue": "^3.5.13",
+        "vue-loader": "^17.4.2",
+        "vue-router": "^4.4.5"
     }
 }
